--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,11 @@ mapping_version=2023.09.03-1.20.1
 
 mod_id=gd656killicon
 mod_name=GD656Killicon
-mod_license=All Rights Reserved
+mod_license=MIT
 
 #=========================================================
 
-mod_version=1.0.9.006-1.20.1-forge
+mod_version=1.1.0.014-1.20.1-forge
 
 #=========================================================
 
