--- a/build.gradle
+++ b/build.gradle
@@ -151,6 +151,10 @@ dependencies {
     // 索敌所需的前置依赖
     compileOnly fg.deobf("curse.maven:vocalized-980660:5154514")
     runtimeOnly fg.deobf("curse.maven:vocalized-980660:5154514")
+
+    // PINGWHEEL前置依赖
+    compileOnly fg.deobf("maven.modrinth:ping-wheel:OIvI752z")
+    runtimeOnly fg.deobf("maven.modrinth:ping-wheel:OIvI752z")
 }
 
 // 资源处理任务配置
